# MBA_Project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-quality.yml
no_solid_app/: locustfile.py  main.py  pyproject.toml  pytest.ini
no_solid_app/api/: models.py
no_solid_app/database/: database.py  models.py
no_solid_app/helpers/: abstract_factory.py  account_factory.py  account_operations.py  auth_manager.py  facade.py  singleton.py  transaction_facade.py  user_creator.py
no_solid_app/static/: welcome.html
no_solid_app/tests/: conftest.py  test_abstract_factory.py  test_facade.py  test_user_singleton.py
no_solid_app/tests/unit/: test_account_factory.py  test_account_operations.py  test_auth_manager.py  test_transaction_facade.py  test_user_creator.py
solid_app/: .coverage  README.md  commands.py  conftest.py  database.db  database.py  factories.py  locustfile.py  main.py  models.py  proxies.py  pyproject.toml
solid_app/database/: SOLID_BANK.db  database.py  models.py
solid_app/helpers/: commands.py  factories.py  proxies.py
solid_app/models/: __init__.py  models.py
solid_app/src/: commands.py  factories.py  main.py  proxies.py
solid_app/src/db_sqlite/: database.db  database.py
solid_app/static/: index.html  welcome.html
solid_app/static/css/: styles.css
solid_app/static/js/: app.js
solid_app/test/: conftest.py  test_api.py  test_commands.py  test_factories.py  test_proxies.py  test_user_endpoints.py
